gccida/g3/push_reload
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1333:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class a5, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1334:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1335:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1339:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1342:4: error: expected ';' after expression
rtx rtwint; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1342:5: error: use of undeclared identifier 'rtwint'; did you mean 'rewind'?
rtx rtwint; // r13 
    ^~~~~~
    rewind
/usr/include/stdio.h:694:13: note: 'rewind' declared here
extern void rewind (FILE *__stream);
            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1348:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1349:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1350:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1351:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1360:6: error: use of undeclared identifier 'v31'
rtx *v31; // r10 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1365:4: error: expected ';' after expression
rtx v36; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1365:5: error: use of undeclared identifier 'v36'
rtx v36; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1375:4: error: expected ';' after expression
rtx v47; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1375:5: error: use of undeclared identifier 'v47'
rtx v47; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1380:6: error: use of undeclared identifier 'v52'
rtx *v52; // r15 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1387:4: error: expected ';' after expression
rtx v59; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1387:5: error: use of undeclared identifier 'v59'
rtx v59; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/reload.c:1390:6: error: use of undeclared identifier 'v62'
rtx *v62; // r10 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/push_reload/src/obj/reload.o] Error 1
